tests/NormalTests/paczka1/fuzzy1/48705385.err
Error in line 11: AjEP A229 80,2
Error in line 21: 5Md A::9 :7,7
Error in line 20: AjEP S768 93,0
Error in line 22: aVraN2cT4 A167 33,4
Error in line 23: S768 A229 62,6
Error in line 36: S768 S886 -6,3
Error in line 37: AjEP A229 47,0
